# oll-2025-prigen

./: .gitignore  Dockerfile  LICENSE  main.py  pyproject.toml  requirements.txt
src/: app.py  policy_generator.py  questions.py  session_manager.py  translations.py  visualizer.py
