[project]
name = "datadraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "requests>=2.32.3",
    "ruff>=0.11.4",
    "streamlit>=1.27.0",
    "tabulate>=0.9.0",
]
